UPDATE order module, plenty bug fixes